script/calico/files/busybox-label2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: label-demo
  labels:
    environment: production
    access: "true"
    role: frontend
spec:
  containers:
  - image: arm64v8/busybox
    command:
      - sleep
      - "360000"
    imagePullPolicy: IfNotPresent
    name: busybox
  restartPolicy: Always
